--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.3.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
