--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
+    "prism-react-renderer": "^2.4.1",
+    "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "react-syntax-highlighter": "^16.0.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.3.0",
     "xlsx": "^0.18.5"
   },
